5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4003/executions/1590_1016.log
== TEST (2019-04-01 19:35:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
v1 = float(input("a:"))
v2 = float(input("b:"))
v3 = floar(input("c:"))
s = (v1+v2+v3)/2
from math import*
A = sqrt(s*(s-v1)*(s-v2)*(s-v3))
print(round(x,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    v3 = floar(input())
NameError: name 'floar' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:35:48) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
v1 = float(input("a:"))
v2 = float(input("b:"))
v3 = float(input("c:"))
s = (v1+v2+v3)/2
from math import*
A = sqrt(s*(s-v1)*(s-v2)*(s-v3))
print(round(x,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(x,5))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:36:13) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
v1 = float(input("a:"))
v2 = float(input("b:"))
v3 = float(input("c:"))
s = (v1+v2+v3)/2
from math import*
A = sqrt(s*(s-v1)*(s-v2)*(s-v3))
print(round(A,5))
-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:36:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
v1 = float(input("a:"))
v2 = float(input("b:"))
v3 = float(input("c:"))
s = (v1+v2+v3)/2
from math import*
A = sqrt(s*(s-v1)*(s-v2)*(s-v3))
print(round(A,5))
-- EXECUTION TIME:
0.149819
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
